--- a/style.css
+++ b/style.css
@@ -80,13 +80,16 @@ svg{
 }
 
 .footer {
-    position: absolute;
-    bottom: 0;
     width: 100%;
     height: 35px;
     line-height: 35px;
     background-color: #f5f5f5;
     font-size: 1.3rem;
+}
+
+.logo{
+    width: 300px;
+    height: auto
 }
 
 @keyframes clockHand{
@@ -145,6 +148,10 @@ svg{
         font-size: 3rem;
         font-weight: 300;
         text-transform: uppercase;
+    }
+    .logo{
+        width: 500px;
+        height: auto
     }
     
      
